--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,13 @@
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Android Studio configuration.
+*.iml
+.idea/
+#
+# # Gradle configuration.
+.gradle/
+build/
+#
+# # User configuration.
+local.properties
+#
+# # OS configurations.
+.DS_Store
