--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,8 @@ android {
 dependencies {
     implementation "com.google.ar.sceneform.ux:sceneform-ux:1.5.1"
     implementation "com.android.support:appcompat-v7:27.1.1"
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:gridlayout-v7:27.1.1'
 }
 
 apply plugin: 'com.google.ar.sceneform.plugin'
@@ -67,4 +69,3 @@ sceneform.asset('sampledata/models/andy.obj',
         'default',
         'sampledata/models/andy.sfa',
         'src/main/res/raw/andy')
-
